<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="165dp"
    android:background="#ffffff"
    android:padding="10dp"
    android:elevation="5dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="26dp"
        android:id="@+id/cv_item"
        >

        <ImageView
            android:id="@+id/im_prod_img"
            android:layout_width="68dp"
            android:layout_height="89dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/aashirvaad_aata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="26dp"
            android:fontFamily="@font/poppinsrregular"
            android:textColor="#000000"
            android:textSize="9sp"
            app:layout_constraintStart_toEndOf="@id/im_prod_img"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/header"
            android:text="@string/header"/>

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsrregular"
            android:lineSpacingExtra="5sp"
            android:text="1kg"
            android:textColor="#8a8a8a"
            android:textSize="9sp"
            app:layout_constraintStart_toEndOf="@id/im_prod_img"
            app:layout_constraintTop_toBottomOf="@id/tv_header"
            tools:text="1kg " />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsrregular"
            android:lineSpacingExtra="5sp"
            android:text="@string/rs"
            android:textColor="#000000"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@id/im_prod_img"
            app:layout_constraintTop_toTopOf="@+id/tv_weight" />

        <TextView
            android:id="@+id/tv_fare_cut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinslight"
            android:lineSpacingExtra="5sp"
            android:text="@string/rssmall"
            android:textColor="#000000"
            android:textSize="9sp"
            android:paddingTop="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_price"
            app:layout_constraintTop_toTopOf="@+id/tv_weight" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Add"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="13sp"
            android:fontFamily="@font/poppinslight"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>